# gnum

./: .project  CMakeLists.txt  LICENSE  README.md  build-metallib.sh
include/: gnum.h  gnum.hpp
src/: gnum.cpp  matop.metal
test/: test_gnum.c  test_gnum.cpp
